file/k8s/skywalking/oap-ui-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sky-ui-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 9999
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: ns-monitor
  name: sky-ui-vs
spec:
  hosts:
    - "*"
  gateways:
    - sky-ui-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: oapui-service
            port:
              number: 8080
